--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 * Emacsist
-Emacs微信公众号收录文章存档，每周一定期推送一篇文章。
+Emacs微信公众号收录文章存档，每周一定期推送一篇文章。往期收录的文章全部在articles/目录下，每篇文章名为：发表日期+原文章题目。
 
 ** 欢迎投稿
 投稿方式有以下两种：
-1. 向该项目提交Pull Request;
+1. 向该项目提交Pull Request (投稿的文章请放在tougao/这个目录下);
 2. 发邮件到投稿邮箱：860202632@qq.com;geekplux@gmail.com;aborn@aborn.me (建议以org文档附件形式投稿)。
 
 ** 关注公众号
