--- a/README.org
+++ b/README.org
@@ -13,3 +13,5 @@ Emacs微信公众号收录文章存档，每周一定期推送一篇文章。往
 [[https://github.com/hick][hick]] king [[https://github.com/aborn][aborn]] [[https://github.com/geekplux][geekplux]]
 
 ** 往期文章
+[[./articles/2016-10-23如何搭建Emacs-LaTeX-make工具链.org][2016-10-23如何搭建Emacs-LaTeX-make工具链]]
+[[./articles/2016-10-31Emacs的书签功能介绍.org][2016-10-31Emacs的书签功能介绍]]
