--- a/README.org
+++ b/README.org
@@ -12,6 +12,15 @@ Emacs微信公众号收录文章存档，每周一定期推送一篇文章。往
 ** 维护人
 [[https://github.com/hick][hick]] king [[https://github.com/aborn][aborn]] [[https://github.com/geekplux][geekplux]]
 
+** 生成往期文章列表
+
+#+BEGIN_SRC emacs-lisp
+(load-file "/path/to/emacsist.el")
+(require 'emacsist)
+#+END_SRC
+
+执行emacsist.el里的emacsist命令就可以生成往期文章列表。
+
 ** 往期文章
 + [[./articles/2016-10-23如何搭建Emacs-LaTeX-make工具链.org][2016-10-23如何搭建Emacs-LaTeX-make工具链]]
 + [[./articles/2016-10-31Emacs的书签功能介绍.org][2016-10-31Emacs的书签功能介绍]]
