--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * Emacsist
-Emacs微信公众号收录文章存档，每周一定期推送一篇文章。往期收录的文章全部在articles/目录下，每篇文章名为：发表日期+原文章题目。
+Emacs 微信公众号收录文章存档，每周一定期推送一篇文章。往期收录的文章全部在 articles/目录下，每篇文章名为：发表日期+原文章题目。
 
 ** 欢迎投稿
-投稿方式有以下两种：
-1. 向该项目提交Pull Request (投稿的文章请放在tougao/这个目录下);
-2. 发邮件到投稿邮箱：860202632@qq.com;geekplux@gmail.com;aborn@aborn.me (建议以org文档附件形式投稿)。
+投稿方式有以下两种（推荐第一种）：
+1. 向该项目提交 Pull Request (投稿的文章请放在 tougao/这个目录下);
+2. 发邮件到投稿邮箱：860202632@qq.com; geekplux@gmail.com; aborn@aborn.me (建议以 org 文档附件形式投稿)。
 
 ** 关注公众号
 [[./images/qrcode.jpg]]
@@ -20,8 +20,8 @@ Emacs微信公众号收录文章存档，每周一定期推送一篇文章。往
 (setq emacsist-repo-root "/path/to")
 #+END_SRC
 
-执行emacsist.el里的emacsist命令就可以生成往期文章列表。
+执行 emacsist.el 里的 emacsist 命令就可以生成往期文章列表。
 
 ** 往期文章
-+ [[./articles/2016-10-23如何搭建Emacs-LaTeX-make工具链.org][2016-10-23如何搭建Emacs-LaTeX-make工具链]]
-+ [[./articles/2016-10-31Emacs的书签功能介绍.org][2016-10-31Emacs的书签功能介绍]]
++ [[./articles/2016-10-23 如何搭建 Emacs-LaTeX-make 工具链.org][2016-10-23 如何搭建 Emacs-LaTeX-make 工具链]]
++ [[./articles/2016-10-31Emacs 的书签功能介绍.org][2016-10-31Emacs 的书签功能介绍]]
