update README and tougao.org

--- a/README.org
+++ b/README.org
@@ -2,9 +2,14 @@
 Emacs 微信公众号收录文章存档，每周一定期推送一篇文章。往期收录的文章全部在 articles/目录下，每篇文章名为：发表日期+原文章题目。
 
 ** 欢迎投稿
+
 投稿方式有以下两种（推荐第一种）：
 1. 向该项目提交 Pull Request (投稿的文章请放在 tougao/这个目录下);
 2. 发邮件到投稿邮箱：860202632@qq.com; geekplux@gmail.com; aborn@aborn.me (建议以 org 文档附件形式投稿)。
+
+投稿时请：
+- 注明你的昵称，或 ID，总之是你想显示的作者名
+- 如投稿的文章已经再其他地方发表，可以附上原文链接
 
 ** 关注公众号
 [[./images/qrcode.jpg]]
