--- a/tougao/tougao.org
+++ b/tougao/tougao.org
@@ -13,3 +13,9 @@
 
 * TODO 使用 Emacs ediff 作为 git diff 工具 投稿时间:2016-10-31
 投稿文章：https://github.com/lujun9972/lujun9972.github.com/blob/source/Emacs%E4%B9%8B%E6%80%92/%E4%BD%BF%E7%94%A8Emacs%20ediff%E4%BD%9C%E4%B8%BAgit%20diff%E5%B7%A5%E5%85%B7.org
+* TODO  那就从妖艳酷炫的快捷键开始吧！（一） 投稿时间:2016-10-31
+[[./那就从妖艳酷炫的快捷键开始吧！（一）.org][那就从妖艳酷炫的快捷键开始吧！（一）.org]]
+* TODO  那就从妖艳酷炫的快捷键开始吧！（二） 投稿时间:2016-10-31
+[[./那就从妖艳酷炫的快捷键开始吧！（二）.org][那就从妖艳酷炫的快捷键开始吧！（二）.org]]
+* TODO  你能想到的几乎所有关于行的操作 投稿时间:2016-10-31
+[[./你能想到的几乎所有关于行的操作.org][你能想到的几乎所有关于行的操作.org]]
